--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           function(data, status) {
             console.log(data);
             data1 = data;
-            centers = data.centers;
+            Centers = data.centers;
             $('#CentersOfAWeek').html('');
             for (var i = 0; i < data.centers.length; i++) {
               for (var j = 0; j < data.centers[i].sessions.length; j++) {
@@ -145,18 +145,21 @@
 
       $('#cwithdose').click(function() {
         Centerswithdoses = [];
-        for (var i = 0; i < centers.length; i++) {
-          for (var j = 0; j < centers[i].sessions.length; j++) {
-            if (centers[i].sessions[j].available_capacity > 0) {
+        for (var i = 0; i < Centers.length; i++) {
+          for (var j = 0; j < Centers[i].sessions.length; j++) {
+            if (Centers[i].sessions[j].available_capacity > 0) {
               console.log(
-                centers[i].name +
+                Centers[i].name +
                   '  ' +
-                  centers[i].sessions[j].available_capacity
+                  Centers[i].sessions[j].available_capacity
               );
 
-              Centerswithdoses.push(centers[i]);
+              Centerswithdoses.push(Centers[i]);
             }
           }
+        }
+        if (Centerswithdoses.length > 0) {
+          alert('got vaccine! hurry!');
         }
       });
 
